--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -39,7 +39,15 @@
     margin: 0;
     font-weight: 400;
   }
-  
+
+  /* .header-actions{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    border-right: 1px solid #fff;
+    padding-right: 16px;
+  } */
+
   .header-nav {
     display: flex;
     gap: 1.5rem;
