--- a/src/app/components/note-list/note-list.component.html
+++ b/src/app/components/note-list/note-list.component.html
@@ -1,4 +1,7 @@
 <main>
+  <aside>
+    <app-folders (folderSelected)="onFolderSelected($event)"/>
+  </aside>
   <div class="notes-container">
     <div class="notes-header">
       <h2 class="notes-title">My Notes</h2>
@@ -9,7 +12,10 @@
           placeholder="Search notes..."
           class="search-input"/>
         <i class="fa-solid fa-search search-icon"></i>
-        <i class="fa-solid fa-circle-xmark search-clear" (click)="clearSearch()"></i>
+        @if (searchTerm.trim()) {
+          <i class="fa-solid fa-circle-xmark search-clear" (click)="clearSearch()"></i>
+        }
+        <!-- <i class="fa-solid fa-circle-xmark search-clear" (click)="clearSearch()"></i> -->
       </div>
       <a routerLink="/notes/note-form" class="btn btn-primary">Create New Note</a>
     </div>
@@ -22,14 +28,6 @@
               <option value="">Select a category</option>
               @for (category of categories; track category.id) {
                 <option value="{{category.id}}">{{category.name}}</option>
-              }
-            </select>
-          </div>
-          <div class="filter-option">
-            <select class="filter-select" [(ngModel)]="selectedFolder" (change)="onFolderChange($event)">
-              <option value="">Select a folder</option>
-              @for (folder of folders; track folder.id) {
-                <option value="{{folder.id}}">{{folder.name}}</option>
               }
             </select>
           </div>
@@ -55,7 +53,10 @@
             }
           </div>
         </div>
-        <span class="clear-filters" (click)="clearFilters()">Clear Filters</span>
+        @if (selectedCategory || selectedTeam || selectedTags.length > 0) {
+
+          <span class="clear-filters" (click)="clearFilters()">Clear Filters</span>
+        }
       </div>
       <div class="sort-container">
         <p>Sort by</p>
@@ -70,11 +71,15 @@
     @if (notes.length > 0) {
       <div class="notes-list">
         @for (note of notes; track note.id) {
-          <div class="note-card">
+          <div class="note-card" routerLink="/notes/note-details/{{note.id}}">
             <div class="note-header">
               <span class="note-folder">
                 <i class="fa-solid fa-folder"></i>
-                {{getFolderName(note.folderId)}}
+                @if(getFolderName(note.folderId) !== '') {
+                  {{getFolderName(note.folderId)}}
+                }@else {
+                  <span class="note-folder-na">(N/A)</span>
+                }
               </span>
               <div class="note-actions">
                 <i class="fa-solid fa-edit btn btn-icon-primary" routerLink="/notes/note-form/{{note.id}}"></i>
@@ -83,13 +88,25 @@
             </div>
             <div class="note-title-container">
               <h3 class="note-title">{{ note.title }}</h3>
-              <span class="note-category">{{getCategoryName(note.categoryId)}}</span>
+              @if(getCategoryName(note.categoryId) !== '') {
+                <span class="note-category">{{getCategoryName(note.categoryId)}}</span>
+              }@else {
+                <span class="note-category-na">(N/A)</span>
+              }
             </div>
             <p class="note-content">{{ note.content }}</p>
-            <p class="note-team">{{getTeamName(note.teamId)}}</p>
+            @if(getTeamName(note.teamId) !== '') {
+              <p class="note-team">{{getTeamName(note.teamId)}}</p>
+            }@else {
+              <span class="note-team-na">(N/A)</span>
+            }
             <div class="note-tags">
-              @for (tagId of note.tags; track tagId) {
-                <span class="note-tag">{{ getTagName(tagId) }}</span>
+              @if(note.tags && note.tags.length > 0) {
+                @for (tagId of note.tags; track tagId) {
+                  <span class="note-tag">{{ getTagName(tagId) }}</span>
+                }
+              }@else {
+                <span class="note-tags-na">(N/A)</span>
               }
             </div>
           </div>
